--- a/css/style.css
+++ b/css/style.css
@@ -173,6 +173,12 @@ header .open-menu i {
   font-size: 16px;
 }
 
+@media (max-width: 992px) {
+  .home-section .home-items .home-item {
+    margin: 20px 0;
+  }
+}
+
 @media (max-width: 768px) {
   header .menu {
     text-align: center;
@@ -183,6 +189,8 @@ header .open-menu i {
     width: 100%;
     padding: 70px 0;
     display: none;
+    z-index: 1;
+    height: 100vh;
   }
   header .menu .close-menu {
     display: block;
