--- a/css/style.scss
+++ b/css/style.scss
@@ -160,7 +160,15 @@
                 }
             }
         }
-        
+        @media(max-width: 992px){
+            .home-section {
+                .home-items {
+                    .home-item {
+                        margin: 20px 0;
+                    }
+                }
+            }
+        }
         @media(max-width:768px) {
             header {
                 .menu {
@@ -172,6 +180,8 @@
                     width: 100%;
                     padding: 70px 0;
                     display: none;
+                    z-index: 1;
+                    height: 100vh;
                     .close-menu {
                         display: block;
                     }
